force-app/main/default/objects/FEC_Province__c/FEC_Province__c.object-meta.xml
<CustomObject>
    <description>Tỉnh/ Thành phố</description>
    <label>Province</label>
    <nameField>
        <label>Province Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Province</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>