force-app/main/default/objects/FEC_Province__c/fields/FEC_Code__c.field-meta.xml
<CustomField>
    <fullName>FEC_Code__c</fullName>
    <description>Mã code tỉnh thành phố</description>
    <externalId>true</externalId>
    <label>Code</label>
    <length>12</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>