force-app/main/default/objects/FEC_Province__c/fields/FEC_Effective_Date__c.field-meta.xml
<CustomField>
    <fullName>FEC_Effective_Date__c</fullName>
    <description>ngày hiệu lực</description>
    <label>Effective Date</label>
    <type>Date</type>
</CustomField>