force-app/main/default/objects/FEC_Province__c/fields/FEC_Is_Active__c.field-meta.xml
<CustomField>
    <fullName>FEC_Is_Active__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Active</label>
    <type>Checkbox</type>
</CustomField>